testsuite/tests/driver/T21722.stderr

T21722.hs:6:11: error:
    Couldn't match type ‘[Char]’ with ‘Int’
    Expected: Int
      Actual: String
