testsuite/tests/driver/T21722.hs
module T21722 where

main = print ()
  where
    foo :: Int
    foo = "abc"
